infra/service-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - "k8-deploy.otseobande.com"
      secretName: k8-deploy-tls
  rules:
  - host: "k8-deploy.otseobande.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8-deploy
            port:
              number: 80
